WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35536
[Qt] QtLauncher must be refactored to fix command line arguments usage
https://bugs.webkit.org/show_bug.cgi?id=35536
Summary
[Qt] QtLauncher must be refactored to fix command line arguments usage
Jesus Sanchez-Palencia
Reported
2010-03-01 12:35:25 PST
QtLauncher needs to be refactored so it can respect command line arguments (i.e.g.: -graphicsbased wasn't being respected) and inherit settings when you clone or create a new window.
Attachments
Refactor of QtLauncher
(13.25 KB, patch)
2010-03-01 12:50 PST
,
Jesus Sanchez-Palencia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jesus Sanchez-Palencia
Comment 1
2010-03-01 12:50:48 PST
Created
attachment 49739
[details]
Refactor of QtLauncher This fixes the problems described and will make it easier to add more features in the nearby future.
WebKit Commit Bot
Comment 2
2010-03-03 06:42:24 PST
Comment on
attachment 49739
[details]
Refactor of QtLauncher Clearing flags on attachment: 49739 Committed
r55460
: <
http://trac.webkit.org/changeset/55460
>
WebKit Commit Bot
Comment 3
2010-03-03 06:42:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug