2010-03-03  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

Reviewed by Simon Hausmann.

        Refactor QtLauncher so it respects command line arguments
        and inherits settings when you clone or create a new window.

        Implemented with help of Kenneth Rohde Christiansen.

        [Qt] QtLauncher must be refactored to fix command line arguments usage
        https://bugs.webkit.org/show_bug.cgi?id=35536

        * QtLauncher/main.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::init):
        (LauncherWindow::isGraphicsBased):
        (applySetting):
        (LauncherWindow::applyPrefs):
        (LauncherWindow::initializeView):
        (LauncherWindow::newWindow):
        (LauncherWindow::cloneWindow):
        (LauncherWindow::createChrome):
        (main):
        * QtLauncher/webview.cpp:
        (WebViewGraphicsBased::WebViewGraphicsBased):
        (WebViewGraphicsBased::setFrameRateMeasurementEnabled):
        * QtLauncher/webview.h:
        (WebViewGraphicsBased::itemCacheMode):
        (WebViewGraphicsBased::frameRateMeasurementEnabled):

Canonical link: https://commits.webkit.org/46761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55460 268f45cc-cd09-0410-ab3c-d52691b4dbfc